finally resolved the cors issue with websockets and also implemented a authentication using jwt for websocket